--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost"
+baseURL = "https://docs.vlab.digital"
 languageCode = 'en-us'
 title = 'Virtual Labs Research Documentation'
 theme = "hugo-geekdoc"
