feat: added some fly docs and tables of contents everywhere

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://docs.vlab.digital"
 languageCode = 'en-us'
-title = 'Virtual Labs Research Documentation'
+title = 'Virtual Lab Documentation'
 theme = "hugo-geekdoc"
 
 pluralizeListTitles = false
@@ -26,4 +26,4 @@ enableRobotsTXT = true
    tag = "tags"
 
 [params]
- geekdocLogo = 'images/logo.png' 
+ geekdocLogo = 'images/logo.png'
